# CryptoDataScience

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: app.py  bitcoin-30-12-2022.json  dbService.py  response.json
src/data/: bitcoin-10-06-2023.json  bitcoin-11-06-2023.json  bitcoin-12-06-2023.json  bitcoin-13-06-2023.json  bitcoin-14-06-2023.json  bitcoin-15-06-2023.json  bitcoin-2023-06-19.json  bitcoin-28-08-2023.json
